// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdsTabs Tests changes content within a text node to fire a slotchange with no errors 1`] = `
"<ids-tabs value=\\"hello\\" role=\\"tablist\\">
        <ids-tab value=\\"hello\\" role=\\"tab\\" aria-selected=\\"true\\" tabindex=\\"0\\">Its Over 9000</ids-tab>
        <ids-tab value=\\"world\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">World</ids-tab>
        <ids-tab value=\\"can\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Can</ids-tab>
        <ids-tab value=\\"uhearme\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">You Hear Me?</ids-tab>
      </ids-tabs>"
`;

exports[`IdsTabs Tests removes a tab after rendering and does not break 1`] = `
"<ids-tabs value=\\"hello\\" role=\\"tablist\\">
        <ids-tab value=\\"hello\\" role=\\"tab\\" aria-selected=\\"true\\" tabindex=\\"0\\">Hello</ids-tab>
        <ids-tab value=\\"world\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">World</ids-tab>
        <ids-tab value=\\"can\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Can</ids-tab>
        <ids-tab value=\\"uhearme\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">You Hear Me?</ids-tab>
      </ids-tabs>"
`;

exports[`IdsTabs Tests renders correctly 1`] = `
"<ids-tabs value=\\"hello\\" role=\\"tablist\\">
        <ids-tab value=\\"hello\\" role=\\"tab\\" aria-selected=\\"true\\" tabindex=\\"0\\">Hello</ids-tab>
        <ids-tab value=\\"world\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">World</ids-tab>
        <ids-tab value=\\"can\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Can</ids-tab>
        <ids-tab value=\\"uhearme\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">You Hear Me?</ids-tab>
      </ids-tabs>"
`;

exports[`IdsTabs Tests renders with counts, and has no errors 1`] = `
"<ids-tabs role=\\"tablist\\">
        <ids-tab count=\\"20\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Pizzas</ids-tab>
        <ids-tab count=\\"18\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Diet Cokes</ids-tab>
        <ids-tab count=\\"12\\" role=\\"tab\\" aria-selected=\\"false\\" tabindex=\\"-1\\">Ginger Ales</ids-tab>
      </ids-tabs>"
`;
